tests/compile_errors/match-else-missing-arrow.buzz
// Expected `->` after `else`
import "buzz:std";

test "match else missing arrow" {
    std\assert(
        match (1) {
            1 -> "one",
            else "other",
        } == "one",
    );
}
